--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ crispy-bootstrap5==2025.6
 Django==5.2.3
 django-bootstrap5==25.1
 django-crispy-forms==2.4
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.2.1
+psycopg2-binary==2.9.10
+python-dotenv==1.1.1
 sqlparse==0.5.3
